--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gulp-env",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "This module allows you to utilize gulp modules outside of gulp.  This is not meant to replace orchestration - if you use this,  you are assuming responsibility for orchestration.  If you don't want to do that, use gulp!",
   "main": "index.js",
   "scripts": {
@@ -23,5 +23,8 @@
     "end-of-stream": "^1.1.0",
     "q": "^1.4.1",
     "stream-consume": "^0.1.0"
+  },
+  "devDependencies": {
+    "mocha": "^3.0.2"
   }
 }
