--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "minigulp",
-  "version": "0.2.0",
-  "description": "This module allows you to utilize gulp modules outside of gulp.  This is not meant to replace orchestration - if you use this,  you are assuming responsibility for orchestration.  If you don't want to do that, use gulp!",
+  "version": "0.3.0",
+  "description": "A module for running sandboxed instances of gulp within a node.js application.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -20,10 +20,8 @@
   },
   "homepage": "https://github.com/joeenzminger/minigulp#readme",
   "dependencies": {
-    "end-of-stream": "^1.1.0",
     "gulp": "^3.9.1",
-    "q": "^1.4.1",
-    "stream-consume": "^0.1.0"
+    "q": "^1.4.1"
   },
   "devDependencies": {
     "mocha": "^3.0.2"
