--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "gulp-sandbox",
-  "version": "0.11.0",
+  "version": "0.2.0",
   "description": "A module for running sandboxed instances of gulp within a node.js application.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -20,11 +20,11 @@
   },
   "homepage": "https://github.com/joeenzminger/minigulp#readme",
   "dependencies": {
-    "gulp": "^3.9.1",
-    "q": "^1.4.1",
+    "gulp": "^4.0.2",
+    "orchestrator": "^0.3.8",
     "uuid": "^3.0.1"
   },
   "devDependencies": {
-    "mocha": "^3.0.2"
+    "mocha": "^7.1.2"
   }
 }
